2004-01-31  Seiichi SATO  <ssato@sh.rim.or.jp>

	* kik_pty_stream.c: If ptsname() fails, show an error message.

2004-01-31  Seiichi SATO  <ssato@sh.rim.or.jp>

	* mlterm/ml_edit.c(ml_edit_resize): Clear char_index of cursor, when
	the cursor position was reset. This change fixes a bug that caused a
	segfaul when resizing window over and over.

2004-01-31  KATO Kazuyoshi  <kzys@users.sf.net>

	* configure.in: mlterm-zoom can be specified as a value of
	--with-tools option.

	* contrib/tool/mlterm-zoom: Added.

2004-01-31  Tomohiro KUBOTA  <kubota@debian.org>

	* xwindow/x_font.c: wrong comment was fixed.

2004-01-29  Seiichi SATO  <ssato@sh.rim.or.jp>

	* xwindow/x_term_manager.c: fixed a segfault when initial font size
	was out of range.
	(Thanks to Mike FABIAN for sending a patch)

2004-01-29  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm/ml_edit.c: Fixed infinite loop when the number of columns
	needed to display a character is greater than screen width.

2004-01-26  Tomohiro KUBOTA  <kubota@debian.org>

	* Added an explanation for -*/--type option for man/mlterm.1.

2004-01-25  KATO Kazuyoshi  <kzys@users.sf.net>

	* tool/mlmenu/Makefile.in: Fixed a installation path.

2004-01-21  MINAMI Hirokazu  <minami@mistfall.net>

	* made font size range specification options work again.
	(THanks to Mike FABIAN for patchs)

2004-01-17  Tomohiro KUBOTA  <kubota@debian.org>

	* When "configure --with-type-engines=xcore,xft" or "configure
	  --enable-anti-alias", xcore was not enabled.  Fixed.
	* "mlterm --help" says the default of --type-engine is always
	  xcore regardless of the real default (which depends on the
	  compilation option).  Fixed.

2004-01-15  MINAMI Hirokazu  <minami@mistfall.net>

	* x_imagelib_gdk.c: When gtk2 is choosed(-with-imagelib=gdk-pixbuf2),
	use g_object_unref insted of (deprecated)gdk_pixbuf_unref.

	* kik_pty_streams.c: #define __EXTENSIONS__ for solaris.

2004-01-14  Tomohiro KUBOTA  <kubota@debian.org>
